Simple JDBC starter